# tdo

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TODO.md  flake.nix  main.py  pyproject.toml
completions/: tdo.fish
examples/configs/: default.toml  radicale-test.toml  work.toml
src/tdo/: __init__.py  caldav_client.py  cli.py  config.py  diff.py  models.py  sqlite_cache.py  tdo_core.py  time_parser.py  update_descriptor.py  update_linear_parser.py  update_parser.py
src/todo/: __init__.py  caldav_client.py  cli.py  config.py  models.py  sqlite_cache.py  time_parser.py  update_linear_parser.py  update_parser.py
tdo-core/: Cargo.toml
tdo-core/src/: db.rs  main.rs  mutations.rs  task.rs
tests/: conftest.py  test_caldav_client.py  test_cli.py  test_config.py  test_diff.py  test_index_invariants.py  test_sqlite_cache.py  test_time_parser.py  test_update_parser.py
