[project]
name = "todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.4.0",
    "caldav>=2.2.3",
    "parsimonious>=0.11.0",
    "pytimeparse>=1.1.8",
    "rich>=14.2.0",
    "typer>=0.21.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
