[project]
name = "tdo"
version = "0.10.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "arrow>=1.4.0",
    "caldav>=2.2.3",
    "keyring>=25.7.0",
    "parsimonious>=0.11.0",
    "pydantic>=2.12.5",
    "pytimeparse>=1.1.8",
    "rich>=14.2.0",
]
[project.scripts]
tdo = "main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.uv]
package = true
